--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>hello to git!</h1>
     <p>We chabged the doc!</p>
+    <ul>
+        <li>lis item 1</li>
+        <li>list item 2</li>
+    </ul>
 </body>
 </html>
