--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ul>
         <li>lis item 1</li>
         <li>list item 2</li>
+        <li>list item 3</li>
+        <li>list item 4</li>
     </ul>
 </body>
 </html>
